Projeto/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statement
Rule 2     statements -> statements statement
Rule 3     statement_list -> statement
Rule 4     statement_list -> statement statement_list
Rule 5     statement -> ID ASSIGN expression SEMICOLON
Rule 6     statement -> ID PLUSASSIGN expression SEMICOLON
Rule 7     statement -> ID MINUSASSIGN expression SEMICOLON
Rule 8     statement -> expression SEMICOLON
Rule 9     expression -> expression PLUS expression
Rule 10    expression -> expression MINUS expression
Rule 11    expression -> expression TIMES expression
Rule 12    expression -> expression DIVIDE expression
Rule 13    expression -> expression EQUAL expression
Rule 14    expression -> expression NOTEQUAL expression
Rule 15    expression -> expression LESS expression
Rule 16    expression -> expression MORE expression
Rule 17    expression -> expression OR expression
Rule 18    expression -> expression AND expression
Rule 19    expression -> LPAREN expression RPAREN
Rule 20    expression -> NUMBER
Rule 21    expression -> ID
Rule 22    statement -> DO LBRACE statement_list RBRACE
Rule 23    statement -> DO LBRACE statement_list RBRACE WHILE LPAREN expression RPAREN SEMICOLON
Rule 24    expression_list -> expression
Rule 25    expression_list -> expression_list COMMA expression
Rule 26    statement -> PRINT LPAREN expression_list RPAREN SEMICOLON
Rule 27    statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE elif_blocks ELSE LBRACE statement_list RBRACE
Rule 28    statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE elif_blocks
Rule 29    statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
Rule 30    statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 31    elif_blocks -> ELIF LPAREN expression RPAREN LBRACE statement_list RBRACE elif_blocks
Rule 32    elif_blocks -> ELIF LPAREN expression RPAREN LBRACE statement_list RBRACE

Terminals, with rules where they appear

AND                  : 18
ASSIGN               : 5
COLON                : 
COMMA                : 25
DIVIDE               : 12
DO                   : 22 23
ELIF                 : 31 32
ELSE                 : 27 29
EQUAL                : 13
ID                   : 5 6 7 21
IF                   : 27 28 29 30
LBRACE               : 22 23 27 27 28 29 29 30 31 32
LESS                 : 15
LPAREN               : 19 23 26 27 28 29 30 31 32
MINUS                : 10
MINUSASSIGN          : 7
MORE                 : 16
NOTEQUAL             : 14
NUMBER               : 20
OR                   : 17
PLUS                 : 9
PLUSASSIGN           : 6
PRINT                : 26
RBRACE               : 22 23 27 27 28 29 29 30 31 32
RPAREN               : 19 23 26 27 28 29 30 31 32
SEMICOLON            : 5 6 7 8 23 26
TIMES                : 11
WHILE                : 23
error                : 

Nonterminals, with rules where they appear

elif_blocks          : 27 28 31
expression           : 5 6 7 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 23 24 25 27 28 29 30 31 32
expression_list      : 25 26
statement            : 1 2 3 4
statement_list       : 4 22 23 27 27 28 29 29 30 31 32
statements           : 2 0

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statement
    (2) statements -> . statements statement
    (5) statement -> . ID ASSIGN expression SEMICOLON
    (6) statement -> . ID PLUSASSIGN expression SEMICOLON
    (7) statement -> . ID MINUSASSIGN expression SEMICOLON
    (8) statement -> . expression SEMICOLON
    (22) statement -> . DO LBRACE statement_list RBRACE
    (23) statement -> . DO LBRACE statement_list RBRACE WHILE LPAREN expression RPAREN SEMICOLON
    (26) statement -> . PRINT LPAREN expression_list RPAREN SEMICOLON
    (27) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE elif_blocks ELSE LBRACE statement_list RBRACE
    (28) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE elif_blocks
    (29) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (30) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression LESS expression
    (16) expression -> . expression MORE expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression AND expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . ID

    ID              shift and go to state 3
    DO              shift and go to state 5
    PRINT           shift and go to state 7
    IF              shift and go to state 8
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 9

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    expression                     shift and go to state 4

state 1

    (0) S' -> statements .
    (2) statements -> statements . statement
    (5) statement -> . ID ASSIGN expression SEMICOLON
    (6) statement -> . ID PLUSASSIGN expression SEMICOLON
    (7) statement -> . ID MINUSASSIGN expression SEMICOLON
    (8) statement -> . expression SEMICOLON
    (22) statement -> . DO LBRACE statement_list RBRACE
    (23) statement -> . DO LBRACE statement_list RBRACE WHILE LPAREN expression RPAREN SEMICOLON
    (26) statement -> . PRINT LPAREN expression_list RPAREN SEMICOLON
    (27) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE elif_blocks ELSE LBRACE statement_list RBRACE
    (28) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE elif_blocks
    (29) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (30) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression LESS expression
    (16) expression -> . expression MORE expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression AND expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . ID

    ID              shift and go to state 3
    DO              shift and go to state 5
    PRINT           shift and go to state 7
    IF              shift and go to state 8
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 9

    statement                      shift and go to state 10
    expression                     shift and go to state 4

state 2

    (1) statements -> statement .

    ID              reduce using rule 1 (statements -> statement .)
    DO              reduce using rule 1 (statements -> statement .)
    PRINT           reduce using rule 1 (statements -> statement .)
    IF              reduce using rule 1 (statements -> statement .)
    LPAREN          reduce using rule 1 (statements -> statement .)
    NUMBER          reduce using rule 1 (statements -> statement .)
    $end            reduce using rule 1 (statements -> statement .)


state 3

    (5) statement -> ID . ASSIGN expression SEMICOLON
    (6) statement -> ID . PLUSASSIGN expression SEMICOLON
    (7) statement -> ID . MINUSASSIGN expression SEMICOLON
    (21) expression -> ID .

    ASSIGN          shift and go to state 11
    PLUSASSIGN      shift and go to state 12
    MINUSASSIGN     shift and go to state 13
    SEMICOLON       reduce using rule 21 (expression -> ID .)
    PLUS            reduce using rule 21 (expression -> ID .)
    MINUS           reduce using rule 21 (expression -> ID .)
    TIMES           reduce using rule 21 (expression -> ID .)
    DIVIDE          reduce using rule 21 (expression -> ID .)
    EQUAL           reduce using rule 21 (expression -> ID .)
    NOTEQUAL        reduce using rule 21 (expression -> ID .)
    LESS            reduce using rule 21 (expression -> ID .)
    MORE            reduce using rule 21 (expression -> ID .)
    OR              reduce using rule 21 (expression -> ID .)
    AND             reduce using rule 21 (expression -> ID .)


state 4

    (8) statement -> expression . SEMICOLON
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . TIMES expression
    (12) expression -> expression . DIVIDE expression
    (13) expression -> expression . EQUAL expression
    (14) expression -> expression . NOTEQUAL expression
    (15) expression -> expression . LESS expression
    (16) expression -> expression . MORE expression
    (17) expression -> expression . OR expression
    (18) expression -> expression . AND expression

    SEMICOLON       shift and go to state 14
    PLUS            shift and go to state 15
    MINUS           shift and go to state 16
    TIMES           shift and go to state 17
    DIVIDE          shift and go to state 18
    EQUAL           shift and go to state 19
    NOTEQUAL        shift and go to state 20
    LESS            shift and go to state 21
    MORE            shift and go to state 22
    OR              shift and go to state 23
    AND             shift and go to state 24


state 5

    (22) statement -> DO . LBRACE statement_list RBRACE
    (23) statement -> DO . LBRACE statement_list RBRACE WHILE LPAREN expression RPAREN SEMICOLON

    LBRACE          shift and go to state 25


state 6

    (19) expression -> LPAREN . expression RPAREN
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression LESS expression
    (16) expression -> . expression MORE expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression AND expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . ID

    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 9
    ID              shift and go to state 27

    expression                     shift and go to state 26

state 7

    (26) statement -> PRINT . LPAREN expression_list RPAREN SEMICOLON

    LPAREN          shift and go to state 28


state 8

    (27) statement -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE elif_blocks ELSE LBRACE statement_list RBRACE
    (28) statement -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE elif_blocks
    (29) statement -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (30) statement -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 29


state 9

    (20) expression -> NUMBER .

    SEMICOLON       reduce using rule 20 (expression -> NUMBER .)
    PLUS            reduce using rule 20 (expression -> NUMBER .)
    MINUS           reduce using rule 20 (expression -> NUMBER .)
    TIMES           reduce using rule 20 (expression -> NUMBER .)
    DIVIDE          reduce using rule 20 (expression -> NUMBER .)
    EQUAL           reduce using rule 20 (expression -> NUMBER .)
    NOTEQUAL        reduce using rule 20 (expression -> NUMBER .)
    LESS            reduce using rule 20 (expression -> NUMBER .)
    MORE            reduce using rule 20 (expression -> NUMBER .)
    OR              reduce using rule 20 (expression -> NUMBER .)
    AND             reduce using rule 20 (expression -> NUMBER .)
    RPAREN          reduce using rule 20 (expression -> NUMBER .)
    COMMA           reduce using rule 20 (expression -> NUMBER .)


state 10

    (2) statements -> statements statement .

    ID              reduce using rule 2 (statements -> statements statement .)
    DO              reduce using rule 2 (statements -> statements statement .)
    PRINT           reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    LPAREN          reduce using rule 2 (statements -> statements statement .)
    NUMBER          reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)


state 11

    (5) statement -> ID ASSIGN . expression SEMICOLON
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression LESS expression
    (16) expression -> . expression MORE expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression AND expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . ID

    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 9
    ID              shift and go to state 27

    expression                     shift and go to state 30

state 12

    (6) statement -> ID PLUSASSIGN . expression SEMICOLON
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression LESS expression
    (16) expression -> . expression MORE expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression AND expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . ID

    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 9
    ID              shift and go to state 27

    expression                     shift and go to state 31

state 13

    (7) statement -> ID MINUSASSIGN . expression SEMICOLON
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression LESS expression
    (16) expression -> . expression MORE expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression AND expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . ID

    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 9
    ID              shift and go to state 27

    expression                     shift and go to state 32

state 14

    (8) statement -> expression SEMICOLON .

    ID              reduce using rule 8 (statement -> expression SEMICOLON .)
    DO              reduce using rule 8 (statement -> expression SEMICOLON .)
    PRINT           reduce using rule 8 (statement -> expression SEMICOLON .)
    IF              reduce using rule 8 (statement -> expression SEMICOLON .)
    LPAREN          reduce using rule 8 (statement -> expression SEMICOLON .)
    NUMBER          reduce using rule 8 (statement -> expression SEMICOLON .)
    $end            reduce using rule 8 (statement -> expression SEMICOLON .)
    RBRACE          reduce using rule 8 (statement -> expression SEMICOLON .)


state 15

    (9) expression -> expression PLUS . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression LESS expression
    (16) expression -> . expression MORE expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression AND expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . ID

    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 9
    ID              shift and go to state 27

    expression                     shift and go to state 33

state 16

    (10) expression -> expression MINUS . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression LESS expression
    (16) expression -> . expression MORE expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression AND expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . ID

    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 9
    ID              shift and go to state 27

    expression                     shift and go to state 34

state 17

    (11) expression -> expression TIMES . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression LESS expression
    (16) expression -> . expression MORE expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression AND expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . ID

    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 9
    ID              shift and go to state 27

    expression                     shift and go to state 35

state 18

    (12) expression -> expression DIVIDE . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression LESS expression
    (16) expression -> . expression MORE expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression AND expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . ID

    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 9
    ID              shift and go to state 27

    expression                     shift and go to state 36

state 19

    (13) expression -> expression EQUAL . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression LESS expression
    (16) expression -> . expression MORE expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression AND expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . ID

    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 9
    ID              shift and go to state 27

    expression                     shift and go to state 37

state 20

    (14) expression -> expression NOTEQUAL . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression LESS expression
    (16) expression -> . expression MORE expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression AND expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . ID

    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 9
    ID              shift and go to state 27

    expression                     shift and go to state 38

state 21

    (15) expression -> expression LESS . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression LESS expression
    (16) expression -> . expression MORE expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression AND expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . ID

    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 9
    ID              shift and go to state 27

    expression                     shift and go to state 39

state 22

    (16) expression -> expression MORE . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression LESS expression
    (16) expression -> . expression MORE expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression AND expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . ID

    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 9
    ID              shift and go to state 27

    expression                     shift and go to state 40

state 23

    (17) expression -> expression OR . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression LESS expression
    (16) expression -> . expression MORE expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression AND expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . ID

    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 9
    ID              shift and go to state 27

    expression                     shift and go to state 41

state 24

    (18) expression -> expression AND . expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression LESS expression
    (16) expression -> . expression MORE expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression AND expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . ID

    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 9
    ID              shift and go to state 27

    expression                     shift and go to state 42

state 25

    (22) statement -> DO LBRACE . statement_list RBRACE
    (23) statement -> DO LBRACE . statement_list RBRACE WHILE LPAREN expression RPAREN SEMICOLON
    (3) statement_list -> . statement
    (4) statement_list -> . statement statement_list
    (5) statement -> . ID ASSIGN expression SEMICOLON
    (6) statement -> . ID PLUSASSIGN expression SEMICOLON
    (7) statement -> . ID MINUSASSIGN expression SEMICOLON
    (8) statement -> . expression SEMICOLON
    (22) statement -> . DO LBRACE statement_list RBRACE
    (23) statement -> . DO LBRACE statement_list RBRACE WHILE LPAREN expression RPAREN SEMICOLON
    (26) statement -> . PRINT LPAREN expression_list RPAREN SEMICOLON
    (27) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE elif_blocks ELSE LBRACE statement_list RBRACE
    (28) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE elif_blocks
    (29) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (30) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression LESS expression
    (16) expression -> . expression MORE expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression AND expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . ID

    ID              shift and go to state 3
    DO              shift and go to state 5
    PRINT           shift and go to state 7
    IF              shift and go to state 8
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 9

    statement_list                 shift and go to state 43
    expression                     shift and go to state 4
    statement                      shift and go to state 44

state 26

    (19) expression -> LPAREN expression . RPAREN
    (9) expression -> expression . PLUS expression
    (10) expression -> expression . MINUS expression
    (11) expression -> expression . TIMES expression
    (12) expression -> expression . DIVIDE expression
    (13) expression -> expression . EQUAL expression
    (14) expression -> expression . NOTEQUAL expression
    (15) expression -> expression . LESS expression
    (16) expression -> expression . MORE expression
    (17) expression -> expression . OR expression
    (18) expression -> expression . AND expression

    RPAREN          shift and go to state 45
    PLUS            shift and go to state 15
    MINUS           shift and go to state 16
    TIMES           shift and go to state 17
    DIVIDE          shift and go to state 18
    EQUAL           shift and go to state 19
    NOTEQUAL        shift and go to state 20
    LESS            shift and go to state 21
    MORE            shift and go to state 22
    OR              shift and go to state 23
    AND             shift and go to state 24


state 27

    (21) expression -> ID .

    RPAREN          reduce using rule 21 (expression -> ID .)
    PLUS            reduce using rule 21 (expression -> ID .)
    MINUS           reduce using rule 21 (expression -> ID .)
    TIMES           reduce using rule 21 (expression -> ID .)
    DIVIDE          reduce using rule 21 (expression -> ID .)
    EQUAL           reduce using rule 21 (expression -> ID .)
    NOTEQUAL        reduce using rule 21 (expression -> ID .)
    LESS            reduce using rule 21 (expression -> ID .)
    MORE            reduce using rule 21 (expression -> ID .)
    OR              reduce using rule 21 (expression -> ID .)
    AND             reduce using rule 21 (expression -> ID .)
    SEMICOLON       reduce using rule 21 (expression -> ID .)
    COMMA           reduce using rule 21 (expression -> ID .)


state 28

    (26) statement -> PRINT LPAREN . expression_list RPAREN SEMICOLON
    (24) expression_list -> . expression
    (25) expression_list -> . expression_list COMMA expression
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression LESS expression
    (16) expression -> . expression MORE expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression AND expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . ID

    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 9
    ID              shift and go to state 27

    expression_list                shift and go to state 46
    expression                     shift and go to state 47

state 29

    (27) statement -> IF LPAREN . expression RPAREN LBRACE statement_list RBRACE elif_blocks ELSE LBRACE statement_list RBRACE
    (28) statement -> IF LPAREN . expression RPAREN LBRACE statement_list RBRACE elif_blocks
    (29) statement -> IF LPAREN . expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (30) statement -> IF LPAREN . expression RPAREN LBRACE statement_list RBRACE
    (9) expression -> . expression PLUS expression
    (10) expression -> . expression MINUS expression
    (11) expression -> . expression TIMES expression
    (12) expression -> . expression DIVIDE expression
    (13) expression -> . expression EQUAL expression
    (14) expression -> . expression NOTEQUAL expression
    (15) expression -> . expression LESS expression
    (16) expression -> . expression MORE expression
    (17) expression -> . expression OR expression
    (18) expression -> . expression AND expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . ID

    LPAREN          shift and go to state 6
